# PyExpUtils

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Pipfile  README.md  config.json  dev-setup.sh  example.parquet  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup.py
.github/workflows/: publish.yml  test.yml
PyExpUtils/: CircularBuffer.py  FileSystemContext.py  __init__.py
PyExpUtils/collection/: Collector.py  Sampler.py  utils.py
PyExpUtils/models/: Config.py  ExperimentDescription.py  RLExperimentDescription.py  __init__.py
PyExpUtils/results/: Collection.py  LazyCollection.py  __init__.py  indices.py  migrations.py  pandas.py  paths.py  results.py  sqlite.py  sqlite_utils.py  tools.py  voting.py
PyExpUtils/results/_utils/: shared.py
PyExpUtils/results/backends/: backend.py  csv.py  h5.py  numpy.py  pandas.py
PyExpUtils/results/migrations/: management.py  v2.py  v3.py
PyExpUtils/runner/: Args.py  Slurm.py  SlurmArgs.py  __init__.py  parallel.py  parallel_exec.py  utils.py
PyExpUtils/scripts/: sweep_local.py  sweep_slurm.py
PyExpUtils/utils/: Collector.py  NestedDict.py  archive.py  arrays.py  asyncio.py  cache.py  cmdline.py  csv.py  dict.py  fp.py  generator.py  iterable.py  jit.py  pandas.py  path.py  permute.py  random.py  str.py  types.py
docs/: GettingStarted.md  OrganizationPatterns.md
mock_repo/experiments/overfit/best/: ann.json  sdl.json
mock_repo/experiments/overfit/sweeps/: ann.json  sdl.json
scripts/: generate_docs.py  publish.sh  run_tests.sh  tag.sh
tests/: test_CircularBuffer.py  test_FileSystemContext.py
tests/_utils/: pandas.py
tests/models/: test_ExperimentDescription.py
tests/results/: test_Collection.py  test_h5.py  test_indices.py  test_pandas.py  test_paths.py  test_results.py  test_tools.py  test_voting.py
tests/runner/: test_parallel.py  test_slurm.py
tests/utils/: test_Collector.py  test_archive.py  test_arrays.py  test_cmdline.py  test_csv.py  test_dict.py  test_fp.py  test_generator.py  test_path.py  test_permute.py  test_random.py  test_str.py
typings/h5py/: __init__.pyi
typings/numba/: __init__.pyi
typings/numba/experimental/: __init__.pyi
typings/numba/typed/: __init__.pyi
