[tool]
[tool.commitizen]
name = "cz_conventional_commits"
version = "5.1.0"
tag_format = "$version"
version_files = ["pyproject.toml"]

[tool.pdm]
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"
[tool.pdm.dev-dependencies]
dev = [
    "mypy>=0.942",
    "flake8>=5.1.0",
    "commitizen",
    "pre-commit",
    "matplotlib",
    "types-filelock",
    "build",
    "twine",
    "vistir==0.6.1",
]

[tool.mypy]
mypy_path = "typings"

[project]
name = "PyExpUtils-andnp"
version = "5.1.0"
description = "A small set of utilities for RL and ML experiments"
authors = [
    {name = "Andy Patterson", email = "andnpatterson@gmail.com"},
]
dependencies = ["numba>=0.57.0", "numpy>=1.21.5", "filelock>=3.0.0", "pandas"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
